<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Udacity Oscars Quiz</string>
    <string name="question_2">Who won 2017/18 Udacity Oscar for Best Performance by an Actor in a Supporting Role in any Motion Picture</string>
    <string name="question_1">Who won 2017/18 Udacity Oscar for Best Performance by an Actress in a Motion Picture - Comedy</string>
    <string name="answer_1">Catherine Zeta-Jones</string>
    <string name="answer_2">Catherine Deneuve</string>
    <string name="answer_3">Katherine Kuan</string>
    <string name="answer_1_4">Katharine Hepburn</string>
    <string name="answer_2_1">Kunal Kapoor</string>
    <string name="answer_2_2">Kunal Chawla</string>
    <string name="answer_2_3">Kunal Nayyar</string>
    <string name="answer_2_4">Kunal Khemu</string>
    <string name="answer_4_4">Quiz App</string>
    <string name="answer_3_1">Lyla Fujiwara</string>
    <string name="answer_3_2">Layla Alizada</string>
    <string name="answer_3_3">Laila Mehdin</string>
    <string name="answer_3_4">Samson and Delilah</string>
    <string name="answer_4_3">Court Counter App</string>
    <string name="answer_4_2">Hello Android</string>
    <string name="answer_4_1">Happy Birthday Card</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="type_your_answer">Type Your Answer</string>
    <string name="question_3">Who won 2017/18 Udacity Oscar for Best Performance by an Actress in a Supporting Role in any Motion Picture</string>
    <string name="btnSubmit_text">Get Your Score</string>
    <string name="score_text"><xliff:g example="3" id="total_score">%d</xliff:g>/7</string>
    <string name="title_1">Welcome to</string>
    <string name="title_2">Udacity</string>
    <string name="title_3">Oscars Quiz</string>
    <string name="share_result_btn_text">Share Result</string>
    <string name="try_again_btn_txt">Try Again?</string>
    <string name="dear_john">Mr/Mrs Stranger </string>
    <string name="answer_5_1">Meryl Streep</string>
    <string name="answer_5_2">Woody Harrelson</string>
    <string name="answer_5_3">Coco</string>
    <string name="answer_5_4">Mary J. Blige</string>
    <string name="question_5">Which of these 2018 Oscars nominees would you like to see in your next Udacity course Youtube videos</string>
    <string name="quation_4">Which of your Android projects should win Udacity Oscar for VISUAL EFFECTS</string>
    <string name="toast_1">"Tell me a person who doesn´t \nlike Meryl Streep"</string>
    <string name="toast_2">"He is The Man!!"</string>
    <string name="toast_3">"Really!? Animation character!?"</string>
    <string name="toast_4">"Oooh Mama!! \nOooh Yes!"</string>
    <string name="toast_5">"Well done! \nYou know your Udacity stars!"</string>
    <string name="toast_6">"Someone has been sleepy during the course!"</string>
    <string name="shareMessage1">"Check this out! \n"</string>
    <string name="shareMessage2">"\nhas scored \n"</string>
    <string name="shareMessage3">"\nat Udacity Oscar Quiz!"</string>
    <string name="shareMessage4">"Udacity Quiz results for "</string>
    <string name="answer_7_1">“Darkest Hour”</string>
    <string name="answer_7_2">“Forrest Gump”</string>
    <string name="answer_7_4">“The Big Short”</string>
    <string name="answer_7_3">“Phantom Thread”</string>
    <string name="question_7">Which of these films were nominated for Oscars in 2018</string>
    <string name="question_6">Who won Oscar as the best supporting actor for his role as Officer Jason Dixon in 2018</string>
</resources>
